# ispapp-cwmpclient

./: .gitignore  .gitmodules  AUTHORS  BUILD.md  ChangeLog  FIXES_APPLIED.md  Makefile  Makefile.build  NEWS  README  configure.ac  feeds.conf  test-sdk-download.sh  test_wifi
.github/workflows/: build-goipk.yml  build-ipk.yml  dev-build.yml  release.yml
build-output/: docker-build.sh
ext/openwrt/scripts/: ispappd.sh
ext/openwrt/scripts/functions/common/: ipping_launch
ext/openwrt/scripts/functions/tr098/: ipping_diagnostic
ext/openwrt/scripts/functions/tr181/: ipping_diagnostic
feeds/goispappd/: Makefile
feeds/goispappd/src/: config.yml
feeds/goispappd/src/cmd/: inform.go  root.go
feeds/goispappd/src/device/: compareDevice.go  device.go
feeds/goispappd/src/ext/openwrt/scripts/functions/common/: wifi_neighboring_launch
feeds/goispappd/src/ext/openwrt/scripts/functions/tr098/: ipping_diagnostic
feeds/goispappd/src/internal/cwmp/: client.go
feeds/golang/: Makefile
feeds/ispappd/: Config.in  Makefile
feeds/libmicroxml/: Makefile
goispappd/: Makefile.debug  go.mod  go.sum  main.go
goispappd/cmd/: init.go
goispappd/device/: compareEnvelope.go  compareEnvelope_test.go  device.go
goispappd/examples/: GetParameterValuesResponse.xml
goispappd/ext/openwrt/config/: ispappd
goispappd/ext/openwrt/init.d/: ispappd
goispappd/ext/openwrt/scripts/functions/common/: common  device_info
goispappd/ext/openwrt/scripts/functions/tr181/: wifi
goispappd/internal/commands/: inform.go  mod.go
goispappd/internal/config/: config.go
goispappd/internal/cron/: mod.go
goispappd/internal/cron/jobs/: WIFI.go  WIFI_test.go  embeded_test.go
goispappd/internal/cwmp/: client.go  handler.go
goispappd/internal/exec/: mod.go
goispappd/internal/nl80211/: mod.go
goispappd/internal/ubus/: mod.go  ubus_test.go
goispappd/internal/uci/: mod.go  uci_test.go
goispappd/soap/: incoming.go  incoming_methods.go  outgoing.go  outgoing_method_inform.go  outgoing_method_parameters.go  outgoing_methods.go  outgoing_test.go  time.go  tr069_types.go
ispappd/: BUILD.md  BUILD_STATUS.md  COPYING  Config.in  Makefile  Makefile.am  Makefile.standalone  SUMMARY.md  build.sh  clean  configure.ac
ispappd/build-output/: docker-build.sh
ispappd/ext/openwrt/init.d/: ispappd
ispappd/ext/openwrt/scripts/: defaults  ispappd.sh
ispappd/ext/openwrt/scripts/functions/common/: device_info  management_server
ispappd/ext/openwrt/scripts/functions/tr181/: wifi_neighboring_diagnostic
ispappd/scripts/: Dockerfile  README-ssh-test.md  build-ipk.sh  setup-build-env.sh  ssh-test-key.sh  test-build-system.sh
ispappd/src/: backup.c  backup.h  backup_stubs.h  base64.h  basicauth.h  command.c  command.h  config.c  config.h  cwmp.c  cwmp.h  digestauth.c  digestauth.h  dtime.c  dtime.h  external.c  external.h  http.h  ispappcwmp.c  ispappcwmp.h  ispappinit.c  json.c  json.h  libxml_helpers.c  libxml_helpers.h  log.c  log.h  messages.h  time.h  ubus.c  ubus.h  xml.c  xml.c.backup  xml.h  xml_compat.h
scripts/: build-ipk.sh  build-macos.sh  ci-install-deps.sh  ssh-test.sh
src/: backup.c  backup.h  basicauth.c  command.c  command.h  config.c  config.h  cwmp.h  digestauth.h  external.c  external.h  http.c  http.h  ispappcwmp.c  ispappcwmp.h  json.h  messages.h  time.c  time.h  ubus.h  xml.c  xml.h
